--- a/trunk/ui/configDialog.ui
+++ b/trunk/ui/configDialog.ui
@@ -81,72 +81,70 @@
       <number>0</number>
      </property>
      <widget class="QWidget" name="Seite" >
-      <layout class="QGridLayout" >
-       <item row="0" column="0" >
-        <widget class="QGroupBox" name="groupBox" >
-         <property name="title" >
-          <string>Maintenance</string>
-         </property>
-         <layout class="QGridLayout" >
-          <item row="0" column="0" >
-           <layout class="QVBoxLayout" >
-            <item>
-             <layout class="QHBoxLayout" >
-              <item>
-               <widget class="QPushButton" name="cleanDbButton" >
-                <property name="text" >
-                 <string>Clean Unused Databases</string>
-                </property>
-               </widget>
-              </item>
-              <item>
-               <widget class="QPushButton" name="cleanCacheButton" >
-                <property name="text" >
-                 <string>Clean Cache</string>
-                </property>
-               </widget>
-              </item>
-              <item>
-               <widget class="QPushButton" name="emptyCacheButton" >
-                <property name="text" >
-                 <string>Empty Cache</string>
-                </property>
-               </widget>
-              </item>
-             </layout>
-            </item>
-            <item>
-             <widget class="QLabel" name="statusLabel" >
-              <property name="text" >
-               <string comment="waiting for the user to do an action" >Waiting.</string>
-              </property>
-              <property name="alignment" >
-               <set>Qt::AlignCenter</set>
-              </property>
-             </widget>
-            </item>
-            <item>
-             <layout class="QHBoxLayout" />
-            </item>
-           </layout>
-          </item>
-         </layout>
-        </widget>
-       </item>
-       <item row="1" column="0" >
-        <spacer>
-         <property name="orientation" >
-          <enum>Qt::Vertical</enum>
-         </property>
-         <property name="sizeHint" >
-          <size>
-           <width>20</width>
-           <height>40</height>
-          </size>
-         </property>
-        </spacer>
-       </item>
-      </layout>
+      <widget class="QGroupBox" name="groupBox" >
+       <property name="geometry" >
+        <rect>
+         <x>4</x>
+         <y>4</y>
+         <width>614</width>
+         <height>321</height>
+        </rect>
+       </property>
+       <property name="title" >
+        <string>Maintenance</string>
+       </property>
+       <widget class="QWidget" name="" >
+        <property name="geometry" >
+         <rect>
+          <x>107</x>
+          <y>40</y>
+          <width>381</width>
+          <height>251</height>
+         </rect>
+        </property>
+        <layout class="QVBoxLayout" >
+         <item>
+          <layout class="QHBoxLayout" >
+           <item>
+            <widget class="QComboBox" name="mantActionBox" />
+           </item>
+           <item>
+            <widget class="QPushButton" name="mantProcessButton" >
+             <property name="text" >
+              <string>Process  Selected</string>
+             </property>
+            </widget>
+           </item>
+          </layout>
+         </item>
+         <item>
+          <layout class="QHBoxLayout" >
+           <item>
+            <widget class="QLabel" name="statusLabel" >
+             <property name="text" >
+              <string>Waiting</string>
+             </property>
+             <property name="alignment" >
+              <set>Qt::AlignCenter</set>
+             </property>
+            </widget>
+           </item>
+          </layout>
+         </item>
+         <item>
+          <widget class="QTextEdit" name="mantDetails" >
+           <property name="html" >
+            <string>&lt;html>&lt;head>&lt;meta name="qrichtext" content="1" />&lt;style type="text/css">
+p, li { white-space: pre-wrap; }
+&lt;/style>&lt;/head>&lt;body style=" font-family:'Liberation Sans'; font-size:9pt; font-weight:400; font-style:normal;">
+&lt;p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">Shaman Manteinance.&lt;/p>
+&lt;p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">Please choose an action from the Drop-Down Menu.&lt;/p>&lt;/body>&lt;/html></string>
+           </property>
+          </widget>
+         </item>
+        </layout>
+       </widget>
+      </widget>
      </widget>
      <widget class="QWidget" name="Seite_2" >
       <layout class="QGridLayout" >
