--- a/trunk/ui/configDialog.ui
+++ b/trunk/ui/configDialog.ui
@@ -439,35 +439,35 @@ Please note that packages from Unstable and Testing may break your system.</stri
              <item>
               <widget class="QCheckBox" name="coreBox" >
                <property name="text" >
-                <string comment="Don't translate" >Core</string>
+                <string comment="Do not translate" >Core</string>
                </property>
               </widget>
              </item>
              <item>
               <widget class="QCheckBox" name="extraBox" >
                <property name="text" >
-                <string comment="Don't translate" >Extra</string>
+                <string comment="Do not translate" >Extra</string>
                </property>
               </widget>
              </item>
              <item>
               <widget class="QCheckBox" name="communityBox" >
                <property name="text" >
-                <string comment="Don't translate" >Community</string>
+                <string comment="Do not translate" >Community</string>
                </property>
               </widget>
              </item>
              <item>
               <widget class="QCheckBox" name="testingBox" >
                <property name="text" >
-                <string comment="Don't translate" >Testing</string>
+                <string comment="Do not translate" >Testing</string>
                </property>
               </widget>
              </item>
              <item>
               <widget class="QCheckBox" name="unstableBox" >
                <property name="text" >
-                <string comment="Don't translate" >Unstable</string>
+                <string comment="Do not translate" >Unstable</string>
                </property>
               </widget>
              </item>
